# C_Interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/gramma/: ASTNode.cpp  ASTNode.h  AuxFacility.h  CMakeLists.txt  CreateASTNode.cpp  CreateASTNode.h  InterpreteASTNode.cpp  InterpreteASTNode.h  TranslateASTNode.cpp  TranslateASTNode.h  token.cpp  token.h
src/gramma/src/: ASTNode.h  CreateASTNode.cpp  CreateASTNode.h  InterpreteASTNode.cpp  InterpreteASTNode.h  token.cpp  token.h
src/test/: CMakeLists.txt
src/test/src/: main.cpp
